test/error/duplicate-fn-def.dsk
let f = (x: int) -> void
    return
let f = (y: int) -> void
    return
